# clickhouse-marketing-analytics

./: .env.example  .gitignore  README.md  pyproject.toml
dataset/: README.md
docker/: docker-compose.yml
docker/clickhouse/: config.xml  init.sql
queries/: 01_ctr_by_campaign.sql  02_cpa_by_campaign.sql  03_daily_metrics.sql  04_top_regions.sql  05_group_efficiency.sql  06_weekday_distribution.sql  07_ctr_by_month.sql  08_campaign_summary.sql  09_monthly_metrics.sql  10_daily_by_campaign.sql
queries/cohort/: 01_create_cohorts.sql  02_retention_active.sql  03_retention_function.sql  04_keyword_retention.sql  05_retention_matrix.sql
requirements/: base.txt  dev.txt  viz.txt
scripts/: build_dashboard.py  generate_data.py  load_to_clickhouse.py  run_analytics.py  run_pipeline.py
src/: config.py  pipeline.py
src/analytics/: cohort.py  queries.py  runner.py
src/data/: generator.py  ingestor.py  loader.py
src/db/: client.py  schema.py
src/viz/: charts.py  dashboard.py  heatmap.py  report.py
tests/: test_cohort.py  test_generator.py  test_queries.py
